fixed error on leaving dark mode + margin

--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -207,8 +207,8 @@ body {
 						visibility: hidden;
 					}
 	
-					.search-icon, .top-search-icon  {
-						margin-left: 20%;
+					.search-icon, .top-search-icon {
+						margin-left: 18%;
 						width: 20px;
 						height: 20px;
 					}
